tests/test_files_pa3/new/SemanticErrors/LocalVarsNotInitB4Use10.ic
class A
{
	static void main(string[] args) { }
	int a()
	{
		int b;
		if (1 > 0)
		{
			b = 5;
		}
		else if (0 <= 1)
		{
			b = 5;
		}
		else
		{
		}
		
		return b;
	}
}